Other fixes